crates/uitest/fixtures/name_resolution/direct_evm_chain_state_ops_private.snap
---
source: crates/uitest/tests/name_resolution.rs
expression: diags
input_file: fixtures/name_resolution/direct_evm_chain_state_ops_private.fe
---
error[2-0003]: `balance` is not visible
   ┌─ direct_evm_chain_state_ops_private.fe:4:10
   │
 4 │     ops::balance(0)
   │          ^^^^^^^ `balance` is not visible
   │
   ┌─ src/evm/ops.fe:63:19
   │
63 │     pub(ingot) fn balance(_ addr: u256) -> u256
   │                   ------- `balance` is defined here
